feat: Add media consent checkbox and Neon database support
✨ Features:
- Add media consent checkbox to signup form with professional consent language
- Implement Neon PostgreSQL database integration with fallback to in-memory storage
- Add comprehensive database setup scripts and documentation

🔧 Technical Changes:
- Update Signup interface to include mediaConsent field
- Modify API routes to handle media consent data
- Add @neondatabase/serverless for improved serverless database performance
- Update database schema with media_consent column

📝 Documentation:
- Add DATABASE_SETUP.md with multiple database provider options
- Add MEDIA_CONSENT_SETUP.md with Neon-specific setup instructions
- Update README.md with database setup instructions

🎨 UI/UX:
- Style media consent section with proper dark theme integration
- Add clear explanation of media usage rights and withdrawal options
- Maintain form accessibility and responsive design

🛡️ Privacy & Compliance:
- Implement GDPR-compliant consent mechanism
- Default consent to false for privacy protection
- Store consent preferences in database for audit trail

--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db:setup": "bash scripts/setup-local-db.sh",
+    "db:schema": "psql $DATABASE_URL -f database/schema.sql"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
     "@types/leaflet": "^1.9.20",
+    "@vercel/postgres": "^0.10.0",
+    "dotenv": "^17.2.1",
     "leaflet": "^1.9.4",
     "next": "15.5.2",
     "react": "19.1.0",
