--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@neondatabase/serverless": "^1.0.1",
     "@types/leaflet": "^1.9.20",
     "@vercel/postgres": "^0.10.0",
-    "dotenv": "^17.2.1",
+    "dotenv": "^17.2.2",
     "leaflet": "^1.9.4",
     "next": "15.5.2",
     "react": "19.1.0",
@@ -30,6 +30,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vercel": "^46.1.1"
   }
 }
